--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,34 +3,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp" >
+    android:layout_height="@dimen/list_item_height"
+    android:minHeight="@dimen/list_item_height" >
 
     <!-- I have added a second namespace xmlns -->
     <ImageView
         android:id = "@+id/image"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_height="@dimen/list_item_height"
+        android:layout_width="@dimen/list_item_height" />
 
     <LinearLayout
         android:id = "@+id/text_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/list_item_height"
         android:orientation="vertical"
-        android:paddingLeft="16dp" >
+        android:paddingLeft="16dp"
+        android:background="@color/category_numbers" >
 
         <TextView
             android:id = "@+id/miwok_text_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="bottom"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
             tools:text="lutti"
-            />
+            tools:ignore="Suspicious0dp" />
 
         <TextView
             android:id = "@+id/default_text_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:gravity="top"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:layout_weight="1"
             tools:text="one"
             />
 
