--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="@dimen/list_item_height"
-    android:minHeight="@dimen/list_item_height" >
+    android:background="@color/tan_background"
+    android:orientation="horizontal">
 
     <!-- I have added a second namespace xmlns -->
     <ImageView
-        android:id = "@+id/image"
-        android:layout_height="@dimen/list_item_height"
-        android:layout_width="@dimen/list_item_height" />
+        android:id="@+id/image"
+        android:layout_width="@dimen/list_item_height"
+        android:layout_height="@dimen/list_item_height" />
 
+    <!-- toRightOf rimette l'immagine al suo posto -->
     <LinearLayout
-        android:id = "@+id/text_container"
+        android:id="@+id/text_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/list_item_height"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/image"
         android:orientation="vertical"
-        android:paddingLeft="16dp"
-        android:background="@color/category_numbers" >
+        android:paddingLeft="16dp">
 
         <TextView
-            android:id = "@+id/miwok_text_view"
+            android:id="@+id/miwok_text_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -29,19 +33,26 @@
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/white"
             android:textStyle="bold"
-            tools:text="lutti"
-            tools:ignore="Suspicious0dp" />
+            tools:text="lutti" />
 
         <TextView
-            android:id = "@+id/default_text_view"
+            android:id="@+id/default_text_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_weight="1"
             android:gravity="top"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/white"
-            android:layout_weight="1"
-            tools:text="one"
-            />
-
+            tools:text="one" />
     </LinearLayout>
-</LinearLayout>
+
+    <ImageView
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="16dp"
+        android:src="@drawable/ic_play_arrow_black_24dp" />
+
+
+</RelativeLayout>
